# C_DSA_interactive_suite

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  test_array  test_bst  test_circ_queue  test_dll  test_hash_func  test_search  test_sll  test_stack  test_tbt
.github/workflows/: ci.yml
benchmark/: README.md  benchmark.c  benchmark.h  benchmark_backtracking.c  benchmark_demo.c  benchmark_dp.c  benchmark_graphs.c  benchmark_hashing.c  benchmark_heaps.c  benchmark_mst.c  benchmark_scheduling.c  benchmark_searching.c  benchmark_sorting.c  benchmark_strings.c  benchmark_trees.c
demos/advanced_graph_algorithms/: advanced_graph_algorithms_demo.c  bipartite_matching_demo.c  eulerian_path_demo.c  max_flow_demo.c  scc_demo.c
demos/advanced_heaps/: advanced_heaps_demo.c  binomial_demo.c  dary_demo.c  fibonacci_demo.c  leftist_skew_demo.c  min_max_demo.c  treap_demo.c
demos/advanced_sorting_algorithms/: advanced_sorting_demo.c  bucket_sort_demo.c  heap_sort_demo.c  merge_sort_demo.c  quick_sort_demo.c  radix_sort_demo.c
demos/backtracking/: graph_coloring_demo.c  knights_tour_demo.c
demos/data_structures/: array_demo.c  data_structures_demo.c  dcll_demo.c  deque_demo.c  dll_demo.c  scll_demo.c  sll_demo.c  stack_demo.c
demos/expression_evaluation/: infix_to_postfix_demo.c  infix_to_prefix_demo.c  parantheses_checker_demo.c  postfix_evaluation_demo.c
demos/graph_traversals/: astar_demo.c  bellman_ford_demo.c  bfs_demo.c  dfs_demo.c  dijkstra_demo.c  floyd_warshall_demo.c  greedy_best_first_search_demo.c  krushal_demo.c  prim_demo.c  topological_sort_demo.c  visualize_graph_demo.c
demos/sorting_algorithms_n2/: sorting_algorithms_n2_demo.c
demos/trees/: avl_demo.c  bplus_tree_demo.c  bst_demo.c  btree_demo.c  fenwick_tree_demo.c  red_black_tree_demo.c  segment_tree_demo.c  splay_tree_demo.c  tbt_demo.c  trees_demo.c  trie_demo.c
features/benchmark/: benchmark.c  benchmark_demo.c  benchmark_hashing.c  benchmark_trees.c
features/debugger/: README.md  step_debugger.c  step_debugger.h  step_debugger_demo.c
features/memory_profiler/: memory_tracker.c
features/serialization/: serialization.c  serialization.h
features/telemetry/: sorting_telemetry.c  sorting_telemetry.h  sorting_telemetry_dashboard.c
help/: help.c  help.h  help_advanced_topics.c  help_data_structures.c  help_error_correction.c  help_expression_evaluation.c  help_graphs_trees.c  help_hashing.c  help_sorting_searching.c
memory_profiler/: README.md  memory_tracker.c  memory_visualizer.c  memory_visualizer.h
output/: benchmark_history.csv
src/: main.c
src/advanced_graph_algorithms/: advanced_graph_algorithms.h  advanced_graph_algorithms_demo.c  bipartite_matching.c  eulerian_path.c  ford_fulkerson_visualize.c  scc.c  scc_visualize.c
src/advanced_heaps/: advanced_heaps.h  advanced_heaps_demo.c  binomial_heap.c  dary_heap.c  fibonacci_heap.c  leftist_skew_heap.c  min_max_heap.c  treap.c
src/advanced_sorting_algorithms/: advanced_sorting.h  advanced_sorting_demo.c  bucket_sort.c  heap_sort.c  merge_sort.c  quick_sort.c  radix_sort.c
src/backtracking/: backtracking.h  backtracking_demo.c  graph_coloring.c  knights_tour.c  n_queens.c  rat_in_maze.c  sudoku.c
src/benchmark/: benchmark.c  benchmark.h  benchmark_backtracking.c  benchmark_demo.c  benchmark_dp.c  benchmark_hashing.c  benchmark_scheduling.c  benchmark_strings.c  (+1 more)
tests/: test_advanced_sorting.c  test_backtracking.c  test_bplus_tree.c  test_bst.c  test_dining_philosophers.c  test_history_logger.c  test_kruskal.c  test_preemptive_priority.c  test_prim.c  test_producer_consumer.c  test_search.c  test_srtf.c  test_stack.c  test_string_algorithms.c  test_tbt.c
tui/: tui.c  tui.h
(+207 files in other folders)
